--- a/package.json
+++ b/package.json
@@ -11,15 +11,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-react": "^7.17.12",
+    "@coreui/coreui": "^4.1.6",
+    "@coreui/react": "^4.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@mui-treasury/components": "^1.10.1",
+    "@mui-treasury/styles": "^1.13.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.26.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
+    "jsx": "^0.9.89",
     "mongoose": "^6.3.0",
     "nodemailer": "^6.7.4",
     "nodemon": "^2.0.15",
+    "react-hot-toast": "^2.2.0",
+    "react-swipeable-views": "^0.14.0",
+    "stripe": "^9.6.0",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.17.12"
   }
 }
