--- a/backend/Config/config.env
+++ b/backend/Config/config.env
@@ -1,6 +1,6 @@
 PORT=4000
 
-DB_URl= "mongodb+srv://pheonixproductions:<password>@ecommerce.dg1ne.mongodb.net/Ecommerce?retryWrites=true&w=majority"
+DB_URl= "mongodb+srv://pheonixproductions:pheonixproductions@ecommerce.dg1ne.mongodb.net/Ecommerce?retryWrites=true&w=majority"
 
 
 FRONTEND_URL = "http://localhost:3000"
